Fix : overflow, Portfolio center

--- a/src/app.scss
+++ b/src/app.scss
@@ -13,6 +13,7 @@ html {
   body {
     background-color: #0c0c1d;
     color: lightgray;
+    // width: 100%;
   }
   
   a {
@@ -22,7 +23,7 @@ html {
   
   section {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     scroll-snap-align: center;
     overflow: hidden;
   }
