--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -2,6 +2,7 @@
 
 .portfolio {
   position: relative;
+  width: 100%;
 
   .progress {
     position: sticky;
@@ -23,7 +24,7 @@
     }
   }
 
-  .container {
+  .portfolio-container {
     display: flex;
     align-items: center;
     justify-content: center;
